common/sub2api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sub2api
  namespace: sub2api
  labels:
    app.kubernetes.io/name: sub2api
    app.kubernetes.io/instance: sub2api
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: sub2api
    app.kubernetes.io/instance: sub2api
  ports:
    - name: http
      port: 8080
      targetPort: http
      protocol: TCP
